tests/extensions/structs/valid/fieldNameOutside.wacc
begin
    struct sa is
        int s
    end
    int s = 1
end