tests/extensions/structs/syntaxErr/emptyStruct.wacc
begin
    struct sa is

    end
end